--- a/MyCalculator/app/src/main/res/layout-land/activity_main.xml
+++ b/MyCalculator/app/src/main/res/layout-land/activity_main.xml
@@ -7,164 +7,154 @@
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="417dp"
-        android:layout_height="278dp"
+        android:layout_width="734dp"
+        android:layout_height="240dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/buttonp"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
-            android:text="+"
+            android:id="@+id/button"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
+            android:text="@string/p"
             app:layout_column="0"
             app:layout_gravity="fill"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/buttons"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
-            android:text="-"
+            android:id="@+id/button2"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
+            android:text="@string/s"
             app:layout_column="1"
             app:layout_gravity="fill"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/buttonm"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
-            android:text="*"
+            android:id="@+id/button3"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
+            android:text="@string/m"
             app:layout_column="2"
             app:layout_gravity="fill"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/buttond"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
-            android:text="/"
+            android:id="@+id/button4"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
+            android:text="@string/d"
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button7"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button5"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_7"
             app:layout_column="0"
             app:layout_gravity="fill"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button8"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button6"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_8"
             app:layout_column="1"
             app:layout_gravity="fill"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button9"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button7"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_9"
             app:layout_column="2"
             app:layout_gravity="fill"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/buttonC"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button8"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/c"
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button4"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button9"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_4"
             app:layout_column="0"
             app:layout_gravity="fill"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button5"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button10"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_5"
             app:layout_column="1"
             app:layout_gravity="fill"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button6"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button11"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_6"
             app:layout_column="2"
             app:layout_gravity="fill"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/buttonAC"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button12"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/ac"
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button1"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button13"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_1"
             app:layout_column="0"
             app:layout_gravity="fill"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button14"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_2"
             app:layout_column="1"
             app:layout_gravity="fill"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:id="@+id/button15"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
             android:text="@string/_3"
             app:layout_column="2"
             app:layout_gravity="fill"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/buttone"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
-            android:text="^"
+            android:id="@+id/button16"
+            android:layout_width="183.5dp"
+            android:layout_height="60dp"
+            android:text="@string/e"
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="3" />
     </androidx.gridlayout.widget.GridLayout>
-
-    <EditText
-        android:id="@+id/Value"
-        android:layout_width="406dp"
-        android:layout_height="114dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
