--- a/MyCalculator/app/src/main/res/layout/activity_main.xml
+++ b/MyCalculator/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="417dp"
-        android:layout_height="278dp"
+        android:layout_width="493dp"
+        android:layout_height="276dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -116,7 +116,7 @@
             android:id="@+id/buttonAC"
             android:layout_width="104.25dp"
             android:layout_height="69.5dp"
-            android:text="@string/ac"
+            android:text="="
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="2" />
@@ -149,10 +149,10 @@
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/buttone"
+            android:id="@+id/button0"
             android:layout_width="104.25dp"
             android:layout_height="69.5dp"
-            android:text="^"
+            android:text="0"
             app:layout_column="3"
             app:layout_gravity="fill"
             app:layout_row="3" />
@@ -160,8 +160,8 @@
 
     <EditText
         android:id="@+id/Value"
-        android:layout_width="406dp"
-        android:layout_height="114dp"
+        android:layout_width="482dp"
+        android:layout_height="134dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
