--- a/MyCalculator/app/src/main/res/layout/activity_main.xml
+++ b/MyCalculator/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,16 @@
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="493dp"
-        android:layout_height="276dp"
+        android:layout_width="395dp"
+        android:layout_height="314dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/buttonp"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="+"
             app:layout_column="0"
             app:layout_gravity="fill"
@@ -24,8 +24,8 @@
 
         <Button
             android:id="@+id/buttons"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="-"
             app:layout_column="1"
             app:layout_gravity="fill"
@@ -33,8 +33,8 @@
 
         <Button
             android:id="@+id/buttonm"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="*"
             app:layout_column="2"
             app:layout_gravity="fill"
@@ -42,8 +42,8 @@
 
         <Button
             android:id="@+id/buttond"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="/"
             app:layout_column="3"
             app:layout_gravity="fill"
@@ -51,8 +51,8 @@
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_7"
             app:layout_column="0"
             app:layout_gravity="fill"
@@ -60,8 +60,8 @@
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_8"
             app:layout_column="1"
             app:layout_gravity="fill"
@@ -69,8 +69,8 @@
 
         <Button
             android:id="@+id/button9"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_9"
             app:layout_column="2"
             app:layout_gravity="fill"
@@ -78,8 +78,8 @@
 
         <Button
             android:id="@+id/buttonC"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/c"
             app:layout_column="3"
             app:layout_gravity="fill"
@@ -87,8 +87,8 @@
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_4"
             app:layout_column="0"
             app:layout_gravity="fill"
@@ -96,8 +96,8 @@
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_5"
             app:layout_column="1"
             app:layout_gravity="fill"
@@ -105,8 +105,8 @@
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_6"
             app:layout_column="2"
             app:layout_gravity="fill"
@@ -114,8 +114,8 @@
 
         <Button
             android:id="@+id/buttonAC"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="="
             app:layout_column="3"
             app:layout_gravity="fill"
@@ -123,8 +123,8 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_1"
             app:layout_column="0"
             app:layout_gravity="fill"
@@ -132,8 +132,8 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_2"
             app:layout_column="1"
             app:layout_gravity="fill"
@@ -141,8 +141,8 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="@string/_3"
             app:layout_column="2"
             app:layout_gravity="fill"
@@ -150,8 +150,8 @@
 
         <Button
             android:id="@+id/button0"
-            android:layout_width="104.25dp"
-            android:layout_height="69.5dp"
+            android:layout_width="97dp"
+            android:layout_height="78.5dp"
             android:text="0"
             app:layout_column="3"
             app:layout_gravity="fill"
@@ -160,11 +160,13 @@
 
     <EditText
         android:id="@+id/Value"
-        android:layout_width="482dp"
-        android:layout_height="134dp"
+        android:layout_width="354dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="164dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
