--- a/MyCalculator/app/src/main/res/layout/activity_main.xml
+++ b/MyCalculator/app/src/main/res/layout/activity_main.xml
@@ -13,118 +13,159 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+        <Button
+            android:id="@+id/buttonclear"
+            android:text="AC"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:layout_gravity="fill"
+            />
+        <Button
+            android:id="@+id/buttonsq"
+            android:text="√"
+            app:layout_column="1"
+            app:layout_row="0"
+            app:layout_gravity="fill"/>
+        <Button
+            android:id="@+id/buttonpow"
+            android:text="^"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:layout_gravity="fill"/>
 
+        <Button
+            android:id="@+id/buttondot"
+            android:text="%"
+            app:layout_column="3"
+            app:layout_gravity="fill"
+            app:layout_row="0" />
         <Button
             android:id="@+id/buttonp"
             android:text="@string/addition"
             app:layout_column="0"
-            app:layout_gravity="fill"
-            app:layout_row="0" />
+            
+            app:layout_row="1"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/buttons"
             android:text="@string/equal"
             app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="0" />
+            
+            app:layout_row="1"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/buttonm"
             android:text="@string/substraction"
             app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="0" />
+            
+            app:layout_row="1"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/buttond"
             android:text="@string/divide"
             app:layout_column="3"
-            app:layout_gravity="fill"
-            app:layout_row="0" />
+            
+            app:layout_row="1"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button7"
             android:text="@string/_7"
             app:layout_column="0"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
+            
+            app:layout_row="2"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button8"
             android:text="@string/_8"
             app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
+            
+            app:layout_row="2"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button9"
             android:text="@string/_9"
             app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
+            
+            app:layout_row="2"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/buttonC"
             android:text="@string/c"
             app:layout_column="3"
-            app:layout_gravity="fill"
-            app:layout_row="1" />
+            
+            app:layout_row="2"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button4"
             android:text="@string/_4"
             app:layout_column="0"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+            
+            app:layout_row="3"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button5"
             android:text="@string/_5"
             app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+            
+            app:layout_row="3"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button6"
             android:text="@string/_6"
             app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+            
+            app:layout_row="3"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/buttonAC"
             android:text="@string/equalto"
             app:layout_column="3"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
+            
+            app:layout_row="3"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button1"
+            android:layout_height="wrap_content"
             android:text="@string/_1"
             app:layout_column="0"
-            app:layout_gravity="fill"
-            app:layout_row="3" />
+            app:layout_row="4"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button2"
             android:text="@string/_2"
             app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="3" />
+            
+            app:layout_row="4"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button3"
             android:text="@string/_3"
             app:layout_column="2"
-            app:layout_gravity="fill"
-            app:layout_row="3" />
+            
+            app:layout_row="4"
+            app:layout_gravity="fill"/>
 
         <Button
             android:id="@+id/button0"
             android:text="0"
             app:layout_column="3"
-            app:layout_gravity="fill"
-            app:layout_row="3" />
+            
+            app:layout_row="4"
+            app:layout_gravity="fill"/>
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
